collects/tests/typed-scheme/fail/multi-arr-parse.rkt
#;
(exn-pred 1 ".*once in a form.*")
#lang typed/scheme

(: foo : (Integer -> Integer -> Integer))
(define foo 1)
